# PerforceRoot_Lupc

./: build_gstreamer-1.0.4.sh  build_gstreamer-1.0.6.sh  build_gstreamer-1.0.7.sh  build_gstreamer-1.0.8.sh  build_gstreamer.sh  build_gstreamer01035.sh  build_oprofile.sh  build_package.sh  build_rule.sh  build_setting.sh  build_tree.sh  readme.txt
media/alsa-lib/: alsa-lib-1.0.23.patch  alsa-tools-1.0.23.tar.bz2  build_alsa.sh  build_alsa_utils.sh
media/dlna/: Readme
media/ffmpeg/: a.txt  bui.txt  build_ffmpeg.sh  config.sh  config2.sh  cp2mainapp.sh  复件 build_ffmpeg.sh
media/flac/: build_flac.sh  flac-1.2.1.patch
media/gnash/: agg-2.5.patch  boost-1.45.0.patch  build_agg.sh  build_boost.sh  build_giflib.sh  build_gnash.sh  build_jpeg.sh  build_libpng.sh  build_libxml2.sh  build_sdl.sh  gnash-0.8.8.tar.bz2
media/gstreamer-0.10.30/: build_gst-plugins-bad.sh  build_gst-plugins-base.sh  build_gst-plugins-good.sh  build_gst-plugins-ugly.sh  build_gstreamer.sh  gst-plugins-bad-0.10.20.patch  (+6 more)
media/gstreamer/gst-plugins-boda-0.0.1/src/: BODA7503.h  Makefile  Makefile.am  boda_dec.h  boda_reg.h  boda_vpu.c  boda_vpu.h  gstboda.c  gstboda.h  hal_arch.h  hal_dev.c
media/gstreamer/gst-plugins-boda-0.0.1/src/.deps/: libgstboda_la-boda_vpu.Plo  libgstboda_la-gstboda.Plo  libgstboda_la-hal_dev.Plo  libgstplugin_la-gstplugin.Plo
media/gstreamer/gst-plugins-coda-0.0.1/src/: Makefile  Makefile.am  VpuJpegTable.h  blackbird.h  coda_dec.h  coda_enc.h  coda_reg.h  coda_vpu.c  coda_vpu.h  gstcoda.c  gstcodadec.c  gstcodadec.h  gstcodaenc.c  gstcodaenc.h  hal_arch.h  hal_dev.c
(+162 files in other folders)
